--- a/css/leaflet.css
+++ b/css/leaflet.css
@@ -476,6 +476,8 @@ svg.leaflet-image-layer.leaflet-interactive path {
 .leaflet-popup-content {
 	margin: 13px 19px;
 	line-height: 1.4;
+	width: fit-content;
+	height: fit-content;
 	}
 .leaflet-popup-content p {
 	margin: 18px 0;
@@ -486,7 +488,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
 	position: absolute;
 	left: 50%;
 	margin-left: -20px;
-	overflow-y: scroll;
+	overflow: hidden;
 	pointer-events: none;
 	}
 .leaflet-popup-tip {
