--- a/css/leaflet.css
+++ b/css/leaflet.css
@@ -476,8 +476,6 @@ svg.leaflet-image-layer.leaflet-interactive path {
 .leaflet-popup-content {
 	margin: 13px 19px;
 	line-height: 1.4;
-	width: fit-content;
-	height: fit-content;
 	}
 .leaflet-popup-content p {
 	margin: 18px 0;
@@ -528,7 +526,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
 	color: #999;
 	}
 .leaflet-popup-scrolled {
-	overflow: auto;
+	overflow-y: scroll;
 	border-bottom: 1px solid #ddd;
 	border-top: 1px solid #ddd;
 	}
