--- a/css/leaflet.css
+++ b/css/leaflet.css
@@ -526,7 +526,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
 	color: #999;
 	}
 .leaflet-popup-scrolled {
-	overflow-y: scroll;
+	overflow: auto;
 	border-bottom: 1px solid #ddd;
 	border-top: 1px solid #ddd;
 	}
