--- a/css/leaflet.css
+++ b/css/leaflet.css
@@ -480,6 +480,12 @@ svg.leaflet-image-layer.leaflet-interactive path {
 .leaflet-popup-content p {
 	margin: 18px 0;
 	}
+.leaflet-popup-content {
+	width: fit-content !important;
+	width: auto !important;
+	height: auto !important;
+	overflow-y: scroll !important;
+	}
 .leaflet-popup-tip-container {
 	width: 40px;
 	height: 20px;
