--- a/css/leaflet.css
+++ b/css/leaflet.css
@@ -468,6 +468,12 @@ svg.leaflet-image-layer.leaflet-interactive path {
 	text-align: center;
 	margin-bottom: 20px;
 	}
+ .leaflet-popup-content {
+        width: fit-content !important;
+        width: auto !important;
+        maxHeight: 350px !important;
+        overflow-y: scroll !important; 
+	}
 .leaflet-popup-content-wrapper {
 	padding: 1px;
 	text-align: left;
